--- a/src/styles/components/_app.scss
+++ b/src/styles/components/_app.scss
@@ -5,6 +5,5 @@
   display: flex;
   height: 100vh;
   width: 100vw;
-  column-gap: 4rem;
   padding: 8rem 4rem 0;
 }
