--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -2,10 +2,13 @@
 
 .component-sidebar {
   flex: 0 0 $side_component_width;
-  padding: 4rem 1rem;
+  margin-right: 4rem; // we cannot use gap of the flex container
   @extend %side_component_base;
+  .field-base {
+    padding: 0 1rem;
+  }
   &.is-closed {
     flex-basis: 0px;
-    padding: 0;
+    margin-right: 0;
   }
 }
